; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_i2c.c_i2c_hw_disable.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_i2c.c_i2c_hw_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@I2C_NUM_0 = common dso_local global i64 0, align 8
@PERIPH_I2C0_MODULE = common dso_local global i32 0, align 4
@I2C_NUM_1 = common dso_local global i64 0, align 8
@PERIPH_I2C1_MODULE = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @i2c_hw_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_hw_disable(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @I2C_NUM_0, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* @PERIPH_I2C0_MODULE, align 4
  %8 = call i32 @periph_module_disable(i32 %7)
  br label %17

9:                                                ; preds = %1
  %10 = load i64, i64* %2, align 8
  %11 = load i64, i64* @I2C_NUM_1, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %9
  %14 = load i32, i32* @PERIPH_I2C1_MODULE, align 4
  %15 = call i32 @periph_module_disable(i32 %14)
  br label %16

16:                                               ; preds = %13, %9
  br label %17

17:                                               ; preds = %16, %6
  %18 = load i32, i32* @ESP_OK, align 4
  ret i32 %18
}

declare dso_local i32 @periph_module_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
